@@ -30,6 +30,7 @@
         Only lighten popupmenus by 2%
         Flat active tab
         Don't shade sliders
+15. Enable shadow, etch, and 'glow' effects for squared and slight rounded appearance.
 
 0.60
 ----
